--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha4 
	- Fixed Flash Player issue when Playlist Method wasn't default
	- Fixed XML-RPC, now uses handshake method properly
	- Fixed bug where stream would start even with no songs
	- Upgraded to Prototype 1.6
	- Added playlists and playlist_songs methods to API
	- Fixed a problem with the javascript that was causing Opera to not
		get the playlist correctly. 
	- Migrated to 'new' auth system that unifies xml-rpc,api and normal
		sessions in a single table
	- Fixed some issues with downsampling + seeking and seeking in 
		general (Thx Karl Hungus) 
	- Fixed CSS references to missing files
	- Fixed Missing Levels on Edit and incorrect level on edit
	- Added check to make sure timestamp passed to API is less then
		four hours old. Set to four hours to allow for some 
		difference in server/client time
	- Fixed basic XML-RPC functionality, using insecure / old 
		authentication method needs more work
	- Fixed it so that all errors should return an XML document when
		using the XML API. 
	- Added Basic ShoutBox functionality, needs formating fixes
		and needs to be moved to a better spot in classic theme it
		must be turned on in the /config/ampache.cfg.php
	- Fixed Mail functions, some features from old mail are missing for
		now. 
	- Fixed Delete Disabled & Sort Files command line scripts
	- Fixed Find Duplicates Functionality
	- Added Highest Rated option to Advanced Random
	- Fixed incorrect mime type being set on ASX playlists
	- Fixed problem where you couldn't change playlist type 
		(Thx Karl Hungus) 
	- Fixed potential issue with display on some preferences
	- Added Length to Advanced Random and removed Minutes from methods 