@@ -38,6 +38,7 @@ $web_path = Config::get('web_path');
 	$object_ids = $playlist->get_items(); 
 	Browse::set_type('playlist_song'); 
 	Browse::add_supplemental_object('playlist',$playlist->id); 
+	Browse::set_static_content(1);
 	Browse::save_objects($object_ids); 
 	Browse::show_objects($object_ids); 
 ?>
